With the textboxes and search buttons added, used the id's from those elements and tied all elements to the Javascript functions.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     margin-bottom: 10px;
 }
 
-.container {
+.main-container {
     display: grid; 
     grid-template-columns: 1fr 1fr; 
     grid-gap: 20px; 
