--- a/style.css
+++ b/style.css
@@ -43,8 +43,7 @@ img {
 }
 
 .NorthCard {
-    border: solid black 5px;
-    border-radius: 10px;
+    
     width: 85%;
     margin-top: 25px;
     margin-left: 50px;
@@ -64,8 +63,7 @@ img {
 }
 
 .SouthCard {
-    border: solid black 5px;
-    border-radius: 10px;
+    
     width: 85%;
     margin-top: 25px;
     margin-left: 50px;
@@ -88,6 +86,7 @@ img {
 }
 .card {
     border: 1px solid #1a1a1a;
+    font-size: 20px;
 }
 
 .card .card-header {
