--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,89 +1,24 @@
+/* CSS to handle some custom styling.  Styling managed by Tailwind CSS */
+
 * {
     color: black;
 }
 
+/* background image */
 body {
-    background-image: url("./Images/pexels-pixabay-209831.jpg");
+    background-image: url("/assets/Images/pexels-pixabay-209831.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
 }
 
+/* general image style */
 img {
     display: inline !important;
     justify-content: center !important;
 }
 
-.header {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: larger;
-    text-align: center;
-    text-decoration: double;
-    margin-bottom: 10px;
-}
-
-.main-container {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-gap: 20px; 
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.NorthContainer {
-    width: 100%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: medium;
-    text-align: center;
-    background: rgba(254, 254, 254, 0.676);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.988); 
-    margin: 10px;
-    padding: 10px;
-}
-
-.NorthCard {
-    
-    width: 85%;
-    margin-top: 25px;
-    margin-left: 50px;
-    margin-bottom: 25px;
-}
-
-.SouthContainer {
-    width: 100%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: medium;
-    text-align: center;
-    background: rgba(254, 254, 254, 0.676);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.988); 
-    margin: 10px;
-    padding: 10px;
-}
-
-.SouthCard {
-    
-    width: 85%;
-    margin-top: 25px;
-    margin-left: 50px;
-    margin-bottom: 25px;
-}
-
-.footer {
-    position: fixed;
-    left: 25px;
-    bottom: 25px;
-    width: 95%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: large;
-    text-align: center;
-    background: rgba(254, 254, 254, 0.676);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.988); 
-    margin-top: 10px;
-    padding: 15px;
-}
+/* Styling for the weather cards */
 .card {
     border: 1px solid #1a1a1a;
     font-size: 20px;
@@ -112,6 +47,7 @@ border-radius: 0.3rem;
 border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
 }
 
+/* Set the width of the city photos */
 #NorthCardPhoto img, #SouthCardPhoto img {
     width: 500px;
     height: 400px;
